cmake_minimum_required(VERSION 3.24)
project(smashkids-server)

project(
    smashkids-server
    VERSION 0.1.0
    DESCRIPTION "A 2D top down based shooting game"
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(server)

# mock client flag
option(MOCK_CLIENT "mock client build" ON)

if(MOCK_CLIENT)
    add_subdirectory(mockclient)
endif()

